# stock-picker-agent-crew

./: README.md  pyproject.toml
src/two_stock_picker/: crew.py  main.py
src/two_stock_picker/config/: agents.yaml  tasks.yaml
src/two_stock_picker/tools/: email_tool.py
