[project]
name = "two_stock_picker"
version = "0.1.0"
description = "two_stock_picker using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.159.0,<1.0.0",
    "resend>=2.15.0",
]

[project.scripts]
two_stock_picker = "two_stock_picker.main:run"
run_crew = "two_stock_picker.main:run"
train = "two_stock_picker.main:train"
replay = "two_stock_picker.main:replay"
test = "two_stock_picker.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
